#1 Use records (i.e. enable Java 14 preview features)